unpackaged/main/default/objects/Omni_Flow_Control__mdt/Omni_Flow_Control__mdt.object-meta.xml
<CustomObject>
    <label>Omni Flow Control</label>
    <pluralLabel>Omni Flow Controls</pluralLabel>
</CustomObject>