unpackaged/main/default/objects/Omni_Flow_Control__mdt/fields/Aging_120_Flow_Control__c.field-meta.xml
<CustomField>
    <fullName>Aging_120_Flow_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aging 120 Flow Control</label>
    <type>Checkbox</type>
</CustomField>