unpackaged/main/default/objects/Omni_Flow_Control__mdt/fields/Aging_60_Flow_Control__c.field-meta.xml
<CustomField>
    <fullName>Aging_60_Flow_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aging 60 Flow Control</label>
    <type>Checkbox</type>
</CustomField>