unpackaged/main/default/objects/Omni_Flow_Control__mdt/fields/Cancelled_Call__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled Call</label>
    <type>Checkbox</type>
</CustomField>