unpackaged/main/default/objects/Omni_Flow_Control__mdt/fields/ETA_Request__c.field-meta.xml
<CustomField>
    <fullName>ETA_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ETA Request</label>
    <type>Checkbox</type>
</CustomField>