unpackaged/main/default/objects/Omni_Flow_Control__mdt/fields/No_Service_Territory_Flow_Control__c.field-meta.xml
<CustomField>
    <fullName>No_Service_Territory_Flow_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SSFI-575,577</description>
    <label>No Service Territory Flow Control</label>
    <type>Checkbox</type>
</CustomField>